# CppTemplate

./: CMakeLists.txt
cmake/: CompilerWarnings.cmake
tests/: CMakeLists.txt
